// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Card should match the favorited snapshot 1`] = `
<div
  className="card favorite"
>
  <h3>
    bananas
  </h3>
  <p>
    b a n a n a s
  </p>
  <button
    onClick={[Function]}
  >
    🗑
  </button>
</div>
`;

exports[`Card should match the snapshot 1`] = `
<div
  className="card undefined"
>
  <h3>
    bananas
  </h3>
  <p>
    b a n a n a s
  </p>
  <button
    onClick={[Function]}
  >
    🗑
  </button>
</div>
`;
